start script added